--- a/1032/1032/1032.vcxproj
+++ b/1032/1032/1032.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{dfe2369c-a33a-4c82-b565-07fd35e6d6db}</ProjectGuid>
     <RootNamespace>My1032</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>w1.1032</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
